--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -211,9 +211,59 @@
       top: -30%;
       width: 100%;
       height: 100vh;
-      // background: url('../../images/sequence/sky000.jpg') no-repeat left center /
-      //   cover;
       z-index: 9;
+      .visual {
+        &__intro {
+          &-wrap {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            justify-content: 100%;
+            background-color: #ffffff;
+            animation: outFrame 1s forwards 2s;
+            .intro__title {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              @include onFlex(center, center);
+              flex-direction: column;
+              transform: translate(-50%, -50%);
+            }
+            .title {
+              position: relative;
+              font-size: rem(52);
+              font-weight: 700;
+              &:first-child {
+                right: -100%;
+                opacity: 0;
+                animation: toLeft 1s forwards 1s ease-in-out;
+              }
+              &:nth-child(2) {
+                left: -100%;
+                opacity: 0;
+                animation: toRight 1s forwards 1.2s ease-in-out;
+              }
+              &:last-child {
+                right: -100%;
+                opacity: 0;
+                animation: toLeft 1s forwards 1.4s ease-in-out;
+              }
+            }
+          }
+        }
+      }
+      .visual__real {
+        position: absolute;
+        left: 50%;
+        bottom: -100%;
+        width: 20%;
+        height: 10%;
+        transform: translateX(-50%);
+        animation: fadeUp 1s forwards 1.4s ease-in-out;
+      }
       .img-area {
         position: absolute;
         top: 0;
@@ -221,18 +271,20 @@
         display: block;
         width: 100%;
         height: 100%;
-        // height: 100%;
+        img {
+          border-radius: rem(10);
+        }
       }
-      &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: block;
-        width: 100%;
-        height: 100%;
-        // background-color: rgba(0, 0, 0, 0.6);
-      }
+      // &::after {
+      //   content: '';
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   display: block;
+      //   width: 100%;
+      //   height: 100%;
+      //   // background-color: rgba(0, 0, 0, 0.6);
+      // }
       .txt-area {
         position: relative;
         @include onFlex();
@@ -250,7 +302,7 @@
           letter-spacing: rem(-2);
           margin-bottom: rem(20);
           animation-delay: 0.4s;
-          span {
+          > span {
             display: inline-block;
             color: $subColor;
           }
@@ -265,6 +317,20 @@
           transform: translateY(40%);
           opacity: 0;
           animation: slideIn 1s forwards ease-in-out;
+        }
+      }
+      &.on {
+        // .visual__real {
+        //   bottom: 0;
+        // }
+        .intro__title {
+          display: none;
+        }
+        .txt-area {
+          opacity: 1;
+        }
+        .img-area img {
+          border-radius: 0;
         }
       }
     }
@@ -295,6 +361,11 @@
         }
       }
     }
+  }
+}
+body {
+  &.stop__scroll {
+    overflow: hidden;
   }
 }
 #info {
