--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -618,6 +618,12 @@ body {
     width: 47%;
     margin-right: 3%;
   }
+  .ly-contents__visual .visual__intro-wrap .intro__title {
+    width: 100%;
+  }
+  .ly-contents__visual .visual__intro-wrap .title {
+    font-size: rem(32);
+  }
   .ly-wrap .sort__contents .img-area {
     height: rem(160);
   }
