--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -293,6 +293,7 @@
         @include maxWidth(rem(756));
         text-align: center;
         padding: 0 rem(30);
+        opacity: 0;
         z-index: 10;
         h2 {
           font-size: rem(52);
@@ -621,6 +622,15 @@ body {
   .ly-contents__visual .visual__intro-wrap .intro__title {
     width: 100%;
   }
+  .ly-contents__visual .visual__intro-wrap .title:first-child {
+    right: -10%;
+  }
+  .ly-contents__visual .visual__intro-wrap .title:nth-child(2) {
+    left: -10%;
+  }
+  .ly-contents__visual .visual__intro-wrap .title:nth-child(2) {
+    right: -10%;
+  }
   .ly-contents__visual .visual__intro-wrap .title {
     font-size: rem(32);
   }
@@ -658,5 +668,27 @@ body {
   }
   .msg-area textarea {
     height: rem(245);
+  }
+
+  @keyframes toLeft {
+    0% {
+      right: -10%;
+      opacity: 0;
+    }
+    100% {
+      right: 0;
+      opacity: 1;
+    }
+  }
+
+  @keyframes toRight {
+    0% {
+      left: -10%;
+      opacity: 0;
+    }
+    100% {
+      left: 0;
+      opacity: 1;
+    }
   }
 }
