--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -13,27 +13,12 @@
             position: relative;
             width: 100%;
             text-align: center;
-            padding: rem(10) 0;
-            &::after {
-              content: '';
-              position: absolute;
-              left: 50%;
-              bottom: 0;
-              width: 0;
-              height: rem(2);
-              background-color: $baseColor;
-              transform: translateX(-50%);
-              transition: width 0.3s ease-in;
-            }
+
             &.on {
               .tab__btn {
-                color: #ffffff;
+                color: $white;
                 background-color: $baseColor;
               }
-            }
-
-            & + li {
-              margin-left: rem(30);
             }
           }
         }
@@ -48,12 +33,12 @@
             @include maxWidth;
             li {
               &.on {
-                &::after {
-                  width: 30%;
-                }
                 .tab__btn {
                   color: #222222;
-                  background-color: $subColor;
+                  background-color: $white;
+                  &::after {
+                    width: 100%;
+                  }
                 }
               }
             }
@@ -67,14 +52,26 @@
         }
       }
       &__btn {
-        height: rem(30);
+        position: relative;
+        height: rem(50);
         font-size: rem(20);
         font-weight: 700;
+        line-height: rem(50);
         color: $baseColor;
-        line-height: rem(30);
-        background-color: $subColor;
+        background-color: $white;
         border-radius: rem(5);
         padding: 0 rem(10);
+        &::after {
+          content: '';
+          position: absolute;
+          left: 50%;
+          bottom: 0;
+          width: 0;
+          height: rem(2);
+          background-color: $baseColor;
+          transform: translateX(-50%);
+          transition: width 0.3s ease-in;
+        }
       }
       &__contents {
         padding-left: 5%;
@@ -94,7 +91,7 @@
           text-align: center;
           border: rem(1) solid #67c2a2;
           border-radius: rem(5);
-          background-color: #ffffff;
+          background-color: $white;
           margin-top: rem(100);
           transition: background-color 0.3s ease-in;
           z-index: 10;
@@ -116,12 +113,12 @@
             height: rem(30);
             color: #222222;
             line-height: rem(30);
-            background-color: $subColor;
+            background-color: $white;
             border-radius: rem(5);
             padding: 0 rem(10);
             cursor: pointer;
             &.on {
-              color: $subColor;
+              color: $white;
               background-color: $baseColor;
             }
           }
@@ -193,7 +190,7 @@
       &__submit {
         height: rem(30);
         font-weight: 700;
-        color: $subColor;
+        color: $white;
         border-radius: rem(5);
         background-color: $baseColor;
         padding: 0 rem(10);
@@ -222,7 +219,7 @@
             width: 100%;
             height: 100%;
             justify-content: 100%;
-            background-color: #ffffff;
+            background-color: $white;
             animation: outFrame 1s forwards 1.4s;
             .intro__title {
               position: absolute;
@@ -294,41 +291,29 @@
         text-align: center;
         padding: 0 rem(30);
         opacity: 0;
+        transition: opacity 0.4s ease-in-out;
         z-index: 10;
         h2 {
           font-size: rem(52);
           font-weight: 600;
-          color: #ffffff;
+          color: $white;
           line-height: 1.1;
           letter-spacing: rem(-2);
           margin-bottom: rem(20);
-          animation-delay: 0.4s;
           > span {
             display: inline-block;
-            color: $subColor;
+            color: $baseColor;
           }
         }
         p {
           line-height: rem(27);
-          color: $subColor;
+          color: $baseColor;
           letter-spacing: rem(0.5);
-          animation-delay: 0.6s;
-        }
-        * {
-          transform: translateY(40%);
-          opacity: 0;
-          animation: slideIn 1s forwards ease-in-out;
         }
       }
       &.on {
-        // .visual__real {
-        //   bottom: 0;
-        // }
         .intro__title {
           display: none;
-        }
-        .txt-area {
-          opacity: 1;
         }
         .img-area img {
           border-radius: 0;
@@ -338,7 +323,7 @@
     &__main {
       position: relative;
       height: 100%;
-      background-color: $subColor;
+      background-color: $white;
       padding: rem(100) 0;
       z-index: 10;
     }
@@ -379,8 +364,8 @@ body {
         width: rem(180);
         height: rem(180);
         border-radius: 50%;
-        background: url('../images/seo_em01.png') #ffffff no-repeat center
-          center / contain;
+        background: url('../images/seo_em01.png') $white no-repeat center center /
+          contain;
       }
     }
     &__right {
@@ -428,9 +413,12 @@ body {
             }
           }
           &-left {
+            width: rem(250);
             flex-shrink: 0;
           }
           &-right {
+            width: calc(100% - 11.25rem);
+            padding-left: rem(100);
           }
           &-list {
             ul {
@@ -454,15 +442,17 @@ body {
             color: $baseColor;
             &-item {
             }
-            &__name {
+            &__title {
+              flex-shrink: 0;
+              width: rem(100);
             }
             &__bar {
               position: relative;
-              width: rem(300);
+              width: calc(100% - 7rem);
               height: rem(15);
+              min-width: rem(185);
               border: rem(1) solid $subTxtColor;
               border-radius: rem(10);
-              margin-left: rem(10);
               box-sizing: content-box;
               overflow: hidden;
             }
@@ -481,7 +471,7 @@ body {
                 position: absolute;
                 top: 50%;
                 right: rem(5);
-                color: #ffffff;
+                color: $white;
                 font-size: rem(10);
                 border-radius: rem(4);
                 transform: translateY(calc(-50% - 1px));
@@ -531,7 +521,7 @@ body {
     display: block;
     width: rem(300);
     height: rem(180);
-    background-color: #ffffff;
+    background-color: $white;
     transform: translate(-50%, -50%);
   }
 }
@@ -576,6 +566,7 @@ body {
     text-align: center;
   }
   .ly-contents__section#info .contents-area__right {
+    // display: block;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -583,7 +574,8 @@ body {
     padding-left: 0;
   }
   #info .contents-area__right .info__cont {
-    width: auto;
+    // width: auto;
+    padding: 0 20px;
   }
 }
 
@@ -591,6 +583,17 @@ body {
   .ly-header {
     justify-content: center;
   }
+  .ly-header__logo {
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+  }
+  .ly-wrap header.on .ly-header__logo {
+    opacity: 1;
+  }
+  // .ly-contents__section#info .contents-area__right {
+  //   display: block;
+  // }
+
   .ly-contents__section#info .contents-area__right .info__cont-title h2 {
     font-size: rem(20);
   }
@@ -650,13 +653,13 @@ body {
   }
   .ly-contents__section#info .contents-area__right .info__cont-right {
     margin-top: rem(15);
+    padding-left: 0;
   }
 
   .ly-contents__section#info .contents-area__right .info__cont .skill {
     font-size: rem(12);
   }
   .ly-contents__section#info .contents-area__right .info__cont .skill__bar {
-    width: rem(224);
     height: rem(10);
   }
   .ly-contents__section#info .contents-area__right .info__cont .skill-item {
@@ -665,6 +668,9 @@ body {
   }
   .ly-contents__section#info .contents-area__right .info__cont + .info__cont {
     padding-left: 0;
+  }
+  #info .contents-area__right .info__cont .skill__per::before {
+    transform: translateY(-50%);
   }
   .msg-area textarea {
     height: rem(245);
