--- a/css/layout/_nav.scss
+++ b/css/layout/_nav.scss
@@ -7,7 +7,7 @@
         width: 100%;
         display: block;
         line-height: 56px;
-        color: $subColor;
+        color: $baseColor;
         font-size: 14px;
         font-weight: 700;
         padding-left: 20px;
